Orbit-Platform/platform/service-mesh/security/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: orbit-api-allow-worker
  namespace: platform-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: orbit-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/platform-dev/sa/orbit-worker
              - cluster.local/ns/platform-dev/sa/default
              - cluster.local/ns/platform-observability/sa/platform-observability-kub-prometheus
